--- a/sections/main-custom-product.liquid
+++ b/sections/main-custom-product.liquid
@@ -580,7 +580,7 @@
               </noscript>
 
             <div class="product-form__input">
-              <label for="custom-name" class="form__label">Your Name</label>
+              <label for="custom-name" class="form__label">Your Namexxxxx</label>
               <input type="text" id="custom-name" class="field__input" form="{{product_form_id}}" name="properties[Your Namex]" />
             </div>
 
